sample-apps/grpc-greeter-go/manifests/greeter-istio-ilbgateway.yaml

# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_grpc_greeter_go_manifests_gateway_greeter2]
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: greeter
spec:
  selector:
    istio: ilbgateway
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ilbgateway-certs/tls.key
      serverCertificate: /etc/istio/ilbgateway-certs/tls.crt
# [END istio_grpc_greeter_go_manifests_gateway_greeter2]
---
